fix dark mode styling

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,7 +98,7 @@ body {
       border-radius: 0.5rem;
       width: 3.225rem;
       text-align: center;
-      font-size: 0.90rem;
+      font-size: 0.70rem;
       padding: 0.2975rem;
       margin-left: 0.9125rem;
 
